--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -654,10 +654,97 @@ fieldset {
       object-fit: cover;
     }
 
+    &-img2{
+      width: 100%;
+      height: 36.4rem;
+      box-shadow: 0px .4rem 2.9rem 0px #00000040;
+      object-fit: cover;
+    }
+
+    &-img3{
+      width: 100%;
+      height: 25.1rem;
+      box-shadow: 0px .4rem 2.9rem 0px #00000040;
+      object-fit: cover;
+    }
+
+    &-black{
+      width: 100%;
+      height: 64.7rem;
+      background-color: #333;
+      position: relative;
+      margin-top: 7rem;
+      margin-left: 7rem !important;
+    }
+
+    &-img4{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 64.7rem;
+      object-fit: cover;
+    }
+
+    &-img5{
+      width: 100%;
+      height: 41.6rem;
+      object-fit: cover;
+    }
+
+    &-img6{
+      background-image: url("../img/security.jpeg");
+      background-position: left center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      width: 47.5rem;
+      height: 66.2rem;
+    }
+
+    &-owl{
+      width: 100%;
+      height: 44.3rem;
+      object-fit: cover;
+
+      &--p{
+        font-family: var(--fontfamilyFont2);
+          font-size: 2rem;
+          font-weight: 400;
+          line-height: 24px;
+          text-align: center;
+          color: #fff;
+          margin: 1rem 0;
+      }
+    }
+
     &-bg{
       width: 38rem;
       height: 52rem;   
     }
+
+    &-faq{
+      background: #FFFFFF80;
+      width: 52.0rem;
+      height: auto;
+      position: absolute;
+      top: 63%;
+      left: -10rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 2rem 4rem;
+      box-shadow: -16.2px -16.2px 23.4px 0px #00000020;
+      backdrop-filter: blur(5px)
+
+    }
+  }
+
+  &_header2{
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    padding: 2rem 0;
+    margin-bottom: -9rem !important;
   }
 
   &_header{
@@ -676,10 +763,12 @@ fieldset {
       text-align: left;
       text-transform: uppercase;
       margin-bottom: 2rem;
+      white-space: nowrap;
+      position: relative;
     }
 
     &-separator{
-      width: 1px;              
+      width: 2px;              
       height: 100px;
       background-color: #333;    
       border: none; 
@@ -692,9 +781,11 @@ fieldset {
       font-weight: 400;
       line-height: var(--lineheight715);
       letter-spacing: var(--letterspacing09);
-      text-align: right;
+      text-align: left;
       text-transform: uppercase;
-      margin-top: 4rem;
+      margin-top: 5rem;
+      white-space: nowrap;
+      position: relative;
     }
   }
 
@@ -741,8 +832,153 @@ fieldset {
         cursor: pointer;
       }
     }
+
+    &-link2{
+      font-family: "Montserrat", sans-serif;
+      font-size: 1.6rem;
+      font-weight: 600;
+      line-height: 22.4px;
+      text-align: center;
+      border: .1rem solid #fff;
+      padding: 1rem 2.5rem !important;
+      color: #fff;
+
+
+      &:hover{
+        transition: .2s all ease-in-out;
+        text-decoration: none;
+        color: #fff;
+        background-color: var(--color-primary);
+        border: .1rem solid var(--color-primary);
+        cursor: pointer;
+      }
+    }
+
+    &-link3{
+      position: absolute;
+      bottom: 1rem;
+      right: 5rem;
+      font-family: "Montserrat", sans-serif;
+      font-size: 1.6rem;
+      font-weight: 600;
+      line-height: 22.4px;
+      text-align: center;
+      border: .1rem solid #fff;
+      padding: 1rem 2.5rem !important;
+      color: #fff;
+
+
+      &:hover{
+        transition: .2s all ease-in-out;
+        text-decoration: none;
+        color: #fff;
+        background-color: var(--color-primary);
+        border: .1rem solid var(--color-primary);
+        cursor: pointer;
+      }
+    }
+  }
+
+
+  &_faq{
+
+    &-title{
+    font-family: "Montserrat", sans-serif;
+    font-size: 2.5rem;
+    font-weight: 500;
+    line-height: 30px;
+    text-align: left;
+    }
   }
 }
+
+
+.engagement{
+
+  &_icons{
+
+    &-img{
+      width: 8.5rem;
+      height: 8.5rem;
+      object-fit: cover;
+      margin: 0 4rem;
+      display: flex;
+      justify-content: center;
+    }
+
+    &-p{
+      font-family: "Montserrat", sans-serif;
+      font-size: 20px;
+      font-weight: 400;
+      line-height: 32px;
+      text-align: center;      
+    }
+  }
+}
+
+.bg-white{
+  background-color: #fff !important;
+}
+
+
+
+
+.bg-black{
+  background-color: #333333;
+}
+
+.w-65{
+  width: 65% !important;
+}
+
+.text{
+  color: #333;
+}
+
+.black-after{
+  &::after{
+    content: ""; /* Create an empty element for the line */
+    position: absolute;
+    top: 0;
+    right: -1rem; /* Adjust this to control the gap between the title and line */
+    height: 100%; /* Makes the line match the height of the title */
+    width: 2px; /* Set the line width */
+    background-color: #333; /* Set the color of the line */
+  }
+}
+
+.linear-after{
+  &::after {
+    content: ""; /* Create an empty element for the line */
+    position: absolute;
+    top: 0;
+    right: -1rem; /* Adjust this to control the gap between the title and line */
+    height: 100%; /* Makes the line match the height of the title */
+    width: 2px; /* Set the line width */
+    background: linear-gradient(to bottom, #333 50%, #fff 50%); /* Gradient from black to white */
+}
+}
+
+.linear-before{
+  &::before {
+    content: ""; /* Create an empty element for the line */
+    position: absolute;
+    top: 2rem;
+    left: 0; /* Adjust this to control the gap between the title and line */
+    height: 9rem; /* Makes the line match the height of the title */
+    width: 2px; /* Set the line width */
+    background: linear-gradient(to bottom, #333 50%, #fff 50%); /* Gradient from black to white */
+    z-index: 100000;
+}
+}
+
+
+
+
+
+
+
+
 
 .blur{
   background: #FFFFFF80;
@@ -814,10 +1050,107 @@ fieldset {
 
 }
 
+.owlNav-left{
+  position: absolute !important;
+  top: 50% !important;
+  left: -10% !important;
+  width: 3.5rem !important;
+  height: 3.5rem !important;
+  color: #fff !important;
+  font-size: 2rem !important;
+  padding: .1rem;
+  border-radius: 50%;
+  border: 2px solid #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding-top: .8rem;
+}
+
+.owlNav-right{
+  position: absolute !important;
+  top: 50% !important;
+  right: -10% !important;
+  width: 3.5rem !important;
+  height: 3.5rem !important;
+  color: #fff !important;
+  font-size: 2rem !important;
+  padding: .1rem;
+  border-radius: 50%;
+  border: 2px solid #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding-top: .8rem;
+}
+
 .active-clr{
   color: var(--color-secondary) !important;
 }
 
+
+.p-y-5{
+  padding: 7rem 0 !important;
+}
+
+
+.bg-off{
+  background-color: #F5F7FA;
+}
+
+
+
+.projects{
+
+  &_card{
+    box-shadow: 2px -3px 24px 0px #00000040;
+    padding: 2rem;
+  }
+
+  &_content{
+
+    &-title{
+      font-family: "Montserrat", sans-serif;
+      font-size: 20px;
+      font-weight: 700;
+      line-height: 24px;
+      text-align: left;
+    }
+
+    &-p{
+      font-family: "Inter", sans-serif;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 21px;
+      text-align: left;
+      margin: 1.5rem 0;
+    }
+  }
+
+  &_image{
+
+    &-img{
+      width: 100%;
+      height: 17.0rem;
+      object-fit: cover;
+    }
+
+    &-img2{
+      width: 100%;
+      height: 9.0rem;
+      object-fit: cover;
+      margin-bottom: 1rem;
+    }
+
+    &-img3{
+      width: 100%;
+      height: 7.0rem;
+      object-fit: cover;
+    }
+  }
+}
 
 .page404{
 
@@ -871,19 +1204,19 @@ fieldset {
 
 .section {
   font-family: 'Montserrat', sans-serif;
-  padding: 10rem 17rem;
+  padding: 10rem 14rem;
 
   @media only screen and (min-width: 2200px) {
     padding: 10rem .5rem;
   }
 
   @media only screen and (max-width: 1800px) {
-    padding: 10rem 17rem;
+    padding: 10rem 14rem;
   }
 
 
   @media only screen and (max-width: 1600px) {
-    padding: 7rem 17rem;
+    padding: 7rem 14rem;
   }
 
 
@@ -1142,80 +1475,137 @@ select{
 
 
 .footer{
-  background-color: var(--color-primary);
-  padding: 5rem 0;
-  padding-bottom: 0;
+  background-color: #333;
 
-  &_logo{
+  &_content{
 
-    @media only screen and (max-width: 768px) {
-      display: flex;
-      justify-content: center;
+    &-title{
+      font-family: var(--fontfamilyFont1);
+      font-size: 2.8rem;
+      font-weight: 400;
+      line-height: 33px;
+      letter-spacing: var(--letterspacing-022);
+      text-align: left;
+      color: #fff;
     }
 
-    &-img{
-      width: 22.6rem;
-      max-width: 100%;
-      height: 14rem;
-      object-fit: cover;
+    &-title2{
+      font-family: "Inter", sans-serif;
+      font-size: 1.4rem;
+      font-weight: 700;
+      line-height: 21px;
+      text-align: left;     
+      color: #fff; 
+    }
 
-      @media only screen and (max-width: 768px) {
-        width: auto;
+    &-phone{
+      font-family: var(--fontfamilyFont2);
+      font-size: 3.2rem;
+      font-weight: 700;
+      line-height: var(--lineheight513);
+      letter-spacing: var(--letterspacing09);
+      text-align: left;
+      color:  #FF0090;
+
+      &:hover{
+        transition: .2s all ease-in-out;
+        text-decoration: none;
+        color: #fff;
+        cursor: pointer;
+      }
+    }
+
+    &-link{
+      font-family: var(--fontfamilyFont2);
+      font-size: 2.4rem;
+      font-weight: 400;
+      line-height: var(--lineheight252);
+      text-align: left;
+      color: #fff;
+
+      &:hover{
+        transition: .2s all ease-in-out;
+        text-decoration: none;
+        color: var(--color-primary);
+        cursor: pointer;
+      }
+    }
+
+    &-header{
+      color: #fff;
+      font-family: var(--fontfamilyFont1);
+      font-size: 2.3rem;
+      font-weight: 400;
+      line-height: var(--lineheight2753);
+      text-align: left;
+    }
+
+    &-p{
+      color: #fff;
+      font-family: var(--fontfamilyFont2);
+      font-size: 1.6rem;
+      font-weight: 400;
+      line-height: var(--lineheight2565);
+      text-align: left;
+    }
+
+    &-ul{
+
+      &--li{
+        margin: .5rem 0;
+      }
+
+      &--link{
+        font-family: "Inter", sans-serif;
+        font-size: 1.4rem;
+        font-weight: 300;
+        line-height: 21px;
+        text-align: left;
+        color: #fff;
+
+        &:hover{
+          transition: .2s all ease-in-out;
+          text-decoration: none;
+          color: var(--color-primary);
+          cursor: pointer;
+        }
       }
     }
   }
 
-  &_content{
+  &_social{
+    display: flex;
+    list-style: none;
+    gap: 1.5rem;
 
-    &-ul{
-      color: var(--background, #FFF);
-      font-family: "Lato", sans-serif;
-      font-size: 1.6rem;
-      font-style: normal;
-      font-weight: 700;
-      line-height: 150%;
+    &-icon{
+      color: #FFFFFF80;
+      font-size: 2.4rem;
     }
+  }
 
-    &-li{
-      margin: 1rem 0;
-      margin-left: 1rem;
+  &_bottom{
+    background-color: #333;
+    padding: 1rem 0;
 
-      &--p{
-        color:#FFF;
-        font-family: "Lato", sans-serif;
-        font-size: 1.4rem;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 150%;
-      }
+    &-p{
+      font-family: "Inter", sans-serif;
+      font-size: 1.4rem;
+      font-weight: 300;
+      line-height: 21px;
+      text-align: center;
+      color: #fff;
 
-      &--link{
-        color:#FFF;
-        font-family: "Lato", sans-serif;
-        font-size: 1.4rem;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 150%;
-
-        &:hover{
-          text-decoration: none;
-          color: var(--color-secondary);
-          transition: .3s all ease-in-out;
-          cursor: pointer;;
-        }
-      }
-
-      &--link2{
-        color:#FFF;
-        font-family: "Lato", sans-serif;
-        font-size: 1.4rem;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 150%;
+      &:hover{
+        transition: .2s all ease-in-out;
+        text-decoration: none;
+        color: var(--color-primary);
+        cursor: pointer;
       }
     }
   }
 }
+
 
 #fixphone {
   font-family: "Lato", sans-serif;
