notre prestation added

--- a/src/_includes/slider.html
+++ b/src/_includes/slider.html
@@ -6,7 +6,7 @@
       </h1>
       <p class="slider_content-p">Pro tout simplement - Depuis 2015</p>
       <div class="slider_content-button">
-        <a href="{% link notre-entreprise.html %}" class="slider_content-button--a">
+        <a href="{% link contact.html %}" class="slider_content-button--a">
           Nous Contacter
         </a>
       </div>
