--- a/src/_includes/navbar.html
+++ b/src/_includes/navbar.html
@@ -12,7 +12,7 @@
       <div class="collapse navbar-collapse Navbar_nav-collapse" id="navbarNav">
         <ul class="navbar-nav Navbar_nav w-100">
           <li class="nav-item Navbar_nav-item">
-            <a class="nav-link Navbar_nav-link" title="Accueil" href="{% link accueil.html %}"> Nos réalisations</a>
+            <a class="nav-link Navbar_nav-link" title="Accueil" href="{% link nos-realisations.html %}"> Nos réalisations</a>
           </li>
           <li class="nav-item Navbar_nav-item">
             <a class="nav-link Navbar_nav-link" title="Nos Prestations" href="{% link nos-prestations.html %}"> Nos prestations </a>
