--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -725,6 +725,27 @@ fieldset {
       margin-left: 7rem !important;
     }
 
+    &-black2{
+      width: 100%;
+      height: 64.0rem;
+      background-color: #333;
+      position: relative;
+      margin-top: -5rem;
+      margin-left: 3rem !important;
+    }
+
+
+    &-black3{
+      width: 100%;
+      height: 64.0rem;
+      background-color: #333;
+      position: relative;
+      margin-top: -5rem;
+      margin-left: -7rem !important;
+    }
+
+
+
     &-img4{
       position: absolute;
       top: 0;
@@ -732,6 +753,7 @@ fieldset {
       width: 100%;
       height: 64.7rem;
       object-fit: cover;
+      z-index: 10000;
     }
 
     &-img5{
@@ -834,7 +856,6 @@ fieldset {
       font-family: var(--fontfamilyFont1);
       font-size: 3.6rem;
       font-weight: 400;
-      line-height: var(--lineheight715);
       letter-spacing: var(--letterspacing09);
       text-align: left;
       text-transform: uppercase;
@@ -948,6 +969,13 @@ fieldset {
 }
 
 
+.white-bg{
+  background-color: #fff !important;
+  color: #333 !important;
+  width: 100%;
+}
+
+
 .engagement{
 
   &_icons{
@@ -976,6 +1004,14 @@ fieldset {
 }
 
 
+.to-be-left{
+  margin-left: -34rem;
+}
+
+
+.to-be-right{
+  margin-right: -47rem !important;
+}
 
 
 .bg-black{
@@ -1003,6 +1039,8 @@ fieldset {
   }
 }
 
+
+
 .linear-after{
   &::after {
     content: ""; /* Create an empty element for the line */
@@ -1023,6 +1061,32 @@ fieldset {
     top: 0rem;
     right: -1rem; /* Adjust this to control the gap between the title and line */
     height: 100%; /* Makes the line match the height of the title */
+    width: 2px; /* Set the line width */
+    background: linear-gradient(to bottom, #333 20%, #fff 80%); /* Gradient from black to white */
+    z-index: 10000;
+}
+}
+
+.linear-after3{
+  &::after {
+    content: ""; /* Create an empty element for the line */
+    position: absolute;
+    top: 0rem;
+    right: -1rem; /* Adjust this to control the gap between the title and line */
+    height: 10rem; /* Makes the line match the height of the title */
+    width: 2px; /* Set the line width */
+    background: linear-gradient(to bottom, #333 20%, #fff 80%); /* Gradient from black to white */
+    z-index: 10000;
+}
+}
+
+.linear-after4{
+  &::after {
+    content: ""; /* Create an empty element for the line */
+    position: absolute;
+    top: 0rem;
+    left: -1rem; /* Adjust this to control the gap between the title and line */
+    height: 10rem; /* Makes the line match the height of the title */
     width: 2px; /* Set the line width */
     background: linear-gradient(to bottom, #333 20%, #fff 80%); /* Gradient from black to white */
     z-index: 10000;
