--- a/src/assets/css/_scss/_bhinternet_custom.scss
+++ b/src/assets/css/_scss/_bhinternet_custom.scss
@@ -12,8 +12,7 @@
 
     &.active {
       a {
-        color: #38C0F0 !important;
-        background-color: #fff !important;
+        color: #D6249D !important;
         background-color: transparent !important;
       }
     }
