--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -9,6 +9,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
 :root {
   --color-primary: #D6249D;
   --color-secondary: #333333;
@@ -176,6 +179,7 @@ header .top a {
 
 .Navbar {
   background: transparent;
+  position: relative;
   z-index: 10000 !important;
   width: 100%;
   max-width: 100%;
@@ -473,6 +477,10 @@ fieldset {
   }
 }
 
+.show-on-active{
+  display: none;
+}
+
 .navbar-active {
   position: fixed !important;
   width: 100%;
@@ -483,7 +491,7 @@ fieldset {
   top: 0 !important;
   left: 0 !important;
   transition: .2s;
-  z-index: 10000 !important;
+  z-index: 1000000 !important;
 }
 
 .navbar-active .Navbar_main {
@@ -500,14 +508,6 @@ fieldset {
   color: #000 !important;
 }
 
-.navbar-active .Navbar_image-img{
-  margin-top: 0 !important;
-  height: 6rem !important;
-  // @media only screen and (max-width: 990px) {
-  //   max-width: 100% !important;
-  // }
-}
-
 .navbar-active .to-show-990{
   display: inline !important;
 }
@@ -518,6 +518,14 @@ fieldset {
 
 .navbar-active .Navbar_nav-link2{
   color: #000 !important;
+}
+
+.navbar-active .show-on-active{
+  display: block !important;
+}
+
+.navbar-active .hide-on-active{
+  display: none !important;
 }
 
 // .navbar-active .Navbar_nav-btn{
@@ -579,7 +587,7 @@ fieldset {
       font-family: "Georgia", sans-serif;
       font-size: 5.7rem;
       font-weight: 400;
-      line-height: 40.47px;
+      line-height: 1.5;
       letter-spacing: 0.009em;
       text-align: center;
       margin: 2rem 0;
@@ -617,6 +625,35 @@ fieldset {
         border: .2rem solid var(--color-primary);
         cursor: pointer;
       }
+
+      &-button2{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        padding: 1.2rem 2.4rem 1.2rem 2.4rem;
+        gap: 8px;
+        border-radius: .5rem 0px 0px 0px;
+        margin: 0 auto;
+        margin-top: 7rem;
+  
+        &:hover{
+          text-decoration: none;
+          color: #fff;
+          background: var(--color-primary);
+          transition: .2s all ease-in-out;
+          border: .2rem solid var(--color-primary);
+          cursor: pointer;
+        }
+      }
+
+      &--p{
+        font-family: "Montserrat", sans-serif;
+        font-size: 1.6rem;
+        font-weight: 700;
+        line-height: 22.4px;
+        text-align: center;
+        color: #fff;
+      }
   
       &--a{
         font-family: "Montserrat", sans-serif;
@@ -630,6 +667,23 @@ fieldset {
           text-decoration: none;
           color: #fff;
           background: var(--color-primary);
+          transition: .2s all ease-in-out;
+          cursor: pointer;
+        }
+      }
+
+      &--a1{
+        font-family: "Montserrat", sans-serif;
+        font-size: 1.6rem;
+        font-weight: 700;
+        line-height: 22.4px;
+        text-align: center;
+        color: #fff;
+
+        &:hover{
+          text-decoration: none;
+          color: #fff;
+          color: var(--color-primary);
           transition: .2s all ease-in-out;
           cursor: pointer;
         }
@@ -674,6 +728,92 @@ fieldset {
     opacity: 0.5;
     transition: 0.5s;
     z-index: -1;
+  }
+
+  &-blog{
+    position: relative;
+    background-image: url("../img/blog-banner.jpeg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: 0;
+    position: relative;
+  
+    @media only screen and (max-width: 990px) {
+     height: 100%;
+    }
+  
+  
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.9);
+      opacity: 0.5;
+      transition: 0.5s;
+      z-index: -1;
+    }
+  
+  }
+
+  &-prestation{
+    position: relative;
+    background-image: url("../img/prestation-banner.jpeg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: 0;
+    position: relative;
+  
+    @media only screen and (max-width: 990px) {
+     height: 100%;
+    }
+  
+  
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.9);
+      opacity: 0.5;
+      transition: 0.5s;
+      z-index: -1;
+    }
+  }
+
+  &-contact{
+    position: relative;
+    background-image: url("../img/contact-banner.jpeg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: 0;
+    position: relative;
+  
+    @media only screen and (max-width: 990px) {
+     height: 100%;
+    }
+  
+  
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.9);
+      opacity: 0.5;
+      transition: 0.5s;
+      z-index: -1;
+    }
+  
   }
 
   &_content {
@@ -811,7 +951,8 @@ fieldset {
       align-items: center;
       padding: 2rem 4rem;
       box-shadow: -16.2px -16.2px 23.4px 0px #00000020;
-      backdrop-filter: blur(5px)
+      backdrop-filter: blur(5px);
+      z-index: 10000 !important;
 
     }
   }
@@ -834,6 +975,18 @@ fieldset {
     &-title{
       font-family: var(--fontfamilyFont1);
       font-size: 3.6rem;
+      font-weight: 400;
+      line-height: var(--lineheight715);
+      letter-spacing: var(--letterspacing09);
+      text-align: left;
+      text-transform: uppercase;
+      margin-bottom: 2rem;
+      position: relative;
+    }
+
+    &-title2{
+      font-family: "Lato", sans-serif;
+      font-size: 2.4rem !important;
       font-weight: 400;
       line-height: var(--lineheight715);
       letter-spacing: var(--letterspacing09);
@@ -1595,6 +1748,10 @@ fieldset {
   background-color: #F6FBFF !important;
 }
 
+.bg-grey2{
+  background-color: #EDEDED !important;
+}
+
 
 .f-w-900{
   font-weight: 900 !important;
@@ -1649,6 +1806,21 @@ select{
 .footer{
   background-color: #333;
 
+  &_image{
+    margin-bottom: 2rem;
+
+    &-logo{
+      width: 20.2rem;
+      height: 13.8rem;
+      max-width: 100%;
+      object-fit: cover;
+    }
+  }
+
+  &_content2{
+    margin-left: 5rem;
+  }
+
   &_content{
 
     &-title{
@@ -1658,7 +1830,7 @@ select{
       line-height: 33px;
       letter-spacing: var(--letterspacing-022);
       text-align: left;
-      color: #fff;
+      color: #EAEAEACC;
     }
 
     &-title2{
@@ -1667,7 +1839,7 @@ select{
       font-weight: 700;
       line-height: 21px;
       text-align: left;     
-      color: #fff; 
+      color: #EAEAEACC; 
     }
 
     &-phone{
@@ -1693,7 +1865,7 @@ select{
       font-weight: 400;
       line-height: var(--lineheight252);
       text-align: left;
-      color: #fff;
+      color: #EAEAEACC;
 
       &:hover{
         transition: .2s all ease-in-out;
@@ -1761,12 +1933,12 @@ select{
     padding: 1rem 0;
 
     &-p{
-      font-family: "Inter", sans-serif;
-      font-size: 1.4rem;
-      font-weight: 300;
+      font-family: "Roboto", sans-serif;
+      font-size: 1.6rem;
+      font-weight: 400;
       line-height: 21px;
       text-align: center;
-      color: #fff;
+      color: #EAEAEACC;
 
       &:hover{
         transition: .2s all ease-in-out;
@@ -1961,6 +2133,92 @@ select{
 // dropdown.active a.dropdown-item {
 //   color: #fff !important;
 // }
+
+
+.black{
+
+  &_form{
+
+    @media only screen and (max-width: 768px) {
+      margin-top: 4rem;
+    }
+
+    &-input{
+      font-family: 'Lato', serif;
+      background: #fff;
+      border: 0;
+      outline: none;
+      border: .1rem solid #0000001A;
+      color: #75797A;
+      height: 4.8rem;
+      padding: 1.2rem 1.3rem 1.2rem 1.3rem;
+      display: block;
+      width: 100%;
+      max-width: 100%;
+      font-size: 1.6rem;
+      font-weight: 400;
+      line-height: 1.5;
+      border-radius: .6rem;
+    }
+
+    &-labeltitle{
+      display: flex;
+      gap: .5rem;
+      color: #000;
+      font-family: "Lato", sans-serif;
+      font-size: 1.6rem;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 1.5;
+      text-align: justify;
+      margin: .5rem 0;
+    }
+
+    &-label{
+      display: flex;
+      gap: .5rem;
+      color: #000;
+      font-family: "Lato", sans-serif;
+      font-size: 1.4rem;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 1.5;
+      text-align: justify;
+      margin: .5rem 0;
+    }
+
+    &-button{
+      color: #fff;
+      text-align: center;
+      font-family: "Inter", sans-serif;
+      font-size: 1.6rem;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 30px;
+      background-color: #333;
+      border-radius: .8rem;
+      padding: .7rem 1.5rem;
+      margin-top: 3rem;
+      width: 60%;
+      outline: none;
+      border: none;
+
+      &:hover {
+        text-decoration: none;
+        background-color: var(--color-primary) !important;
+        transition: .3s all ease-in-out;
+        border: none;
+        outline: none;
+        color: #fff;
+        cursor: pointer;
+      }
+    }
+
+  }
+
+
+}
+
 
 
 
