--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -30,12 +30,12 @@
         <h2 class="footer_content-title">Trouvez votre agence</h2>
         <a href="tel:{{site.data.company.phone}}" class="footer_content-phone">{{site.data.company.phone}}</a>
       </div>
-      <div class="mt-5">
+      <div class="mt-5 footer_content">
         <h3 class="footer_content-header">Agence </h3>
         <p class="footer_content-p">{{site.data.company.address1}}</p>
         <p class="footer_content-p">{{site.data.company.address2}}</p>
       </div>
-      <div class="mt-5">
+      <div class="mt-5 footer_content">
         <h3 class="footer_content-header">Espace de vente</h3>
         <p class="footer_content-p">4, grande rue<br>
           91360 Épinay-sur-Orge</p>
@@ -72,7 +72,7 @@
               </div>
       </div>
       <div class="col-md-6">
-        <div class="footer_content">
+        <div class="footer_content2">
           <h3 class="footer_content-title2">Les conseils</h3>
           <br>
           <ul class="footer_content-ul">
@@ -104,7 +104,7 @@
         </div>
       </div>
       <div class="col-md-3">
-        <div class="footer_content">
+        <div class="footer_content2">
           <h3 class="footer_content-title2">Nous contacter</h3>
           <br>
           <a href="tel:{{site.data.company.phone}}" class="footer_content-link">{{site.data.company.phone}}</a>
