--- a/src/assets/css/_scss/_bhinternet_custom.scss
+++ b/src/assets/css/_scss/_bhinternet_custom.scss
@@ -12,7 +12,7 @@
 
     &.active {
       a {
-        color: #D6249D !important;
+        color: #e62324 !important;
         background-color: transparent !important;
       }
     }
