--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -28,12 +28,11 @@
     <div class="col-md-5">
       <div class="footer_content">
         <h2 class="footer_content-title">Trouvez votre agence</h2>
-        <a href="tel:{{site.data.company.phone}}" class="footer_content-phone">{{site.data.company.phone}}</a>
+        <a href="tel:{{site.data.company.phone}}" class="footer_content-phone color-red">{{site.data.company.phone}}</a>
       </div>
       <div class="mt-5 footer_content">
         <h3 class="footer_content-header">Agence </h3>
-        <p class="footer_content-p">{{site.data.company.address1}}</p>
-        <p class="footer_content-p">{{site.data.company.address2}}</p>
+        <p class="footer_content-p">{{site.data.company.address}}</p>
       </div>
       <div class="mt-5 footer_content">
         <h3 class="footer_content-header">Espace de vente</h3>
@@ -43,35 +42,33 @@
     </div>
   </div>
   <div class="section">
-    <div class="row align-items-end">
-      <div class="col-md-3">
+    <div class="row">
+      <div class="col-lg-3">
         <div class="footer_image">
-          <a href="{% link accueil.html %}" title="Accueil"><img loading="lazy" src="./assets/img/footer-logo.png"
+          <a href="{% link accueil.html %}" title="Accueil"><img loading="lazy" src="./assets/img/logo.svg"
               class="footer_image-logo" alt="Logo" /></a>
               </div>
               <div class="footer_content2">
-                <h3 class="footer_content-title2">COMPAGNIES</h3>
-                <br>
                 <ul class="footer_content-ul">
                   <li class="footer_content-ul--li">
-                    <a href="" class="footer_content-ul--link">Accueil</a>
+                    <a href="{% link accueil.html %}" class="footer_content-ul--link">Accueil</a>
                   </li>
                   <li class="footer_content-ul--li">
-                    <a href="" class="footer_content-ul--link">Nos Prestations</a>
+                    <a href="{% link nos-prestations.html %}" class="footer_content-ul--link">Nos Prestations</a>
                   </li>
                   <li class="footer_content-ul--li">
-                    <a href="" class="footer_content-ul--link">Nos Réalisations</a>
+                    <a href="{% link nos-realisations.html %}" class="footer_content-ul--link">Nos Réalisations</a>
                   </li>
-                  <li class="footer_content-ul--li">
+                  <!-- <li class="footer_content-ul--li">
                     <a href="{% link blog.html %}" class="footer_content-ul--link">Blog</a>
-                  </li>
+                  </li> -->
                   <li class="footer_content-ul--li">
-                    <a href="" class="footer_content-ul--link">Nous Contacter</a>
+                    <a href="{% link contact.html %}" class="footer_content-ul--link">Nous Contacter</a>
                   </li>
                 </ul>
               </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-lg-6">
         <div class="footer_content2">
           <h3 class="footer_content-title2">Les conseils</h3>
           <br>
@@ -103,11 +100,11 @@
           </ul>
         </div>
       </div>
-      <div class="col-md-3">
-        <div class="footer_content2">
+      <div class="col-lg-3">
+        <div class="footer_content2 pt-3">
           <h3 class="footer_content-title2">Nous contacter</h3>
           <br>
-          <a href="tel:{{site.data.company.phone}}" class="footer_content-link">{{site.data.company.phone}}</a>
+          <a href="tel:{{site.data.company.phone}}" class="footer_content-link color-red">{{site.data.company.phone}}</a>
           <p class="footer_content-p">Retrouvez-nous sur</p>
           <ul class="footer_social">
             <li class="footer_social-icon"><i class="fab fa-facebook-f"></i></li>
