--- a/src/_includes/navbar.html
+++ b/src/_includes/navbar.html
@@ -2,7 +2,7 @@
   <nav class="navbar Navbar_main navbar-expand-lg fixedNav">
     <div class="container to-col">
       <div class="Navbar_image hide-on-active">
-        <a href="{% link accueil.html %}" title="Accueil"><img loading="lazy" src="./assets/img/white-logo.png"
+        <a href="{% link accueil.html %}" title="Accueil"><img loading="lazy" src="./assets/img/logo.svg"
           class="Navbar_image-img" alt="Logo" /></a>
       </div>
 
@@ -17,7 +17,10 @@
       <div class="collapse navbar-collapse Navbar_nav-collapse" id="navbarNav">
         <ul class="navbar-nav Navbar_nav w-100">
           <li class="nav-item Navbar_nav-item">
-            <a class="nav-link Navbar_nav-link" title="Accueil" href="{% link nos-realisations.html %}"> Nos réalisations</a>
+            <a class="nav-link Navbar_nav-link" title="Accueil" href="{% link accueil.html %}">Accueil</a>
+          </li>
+          <li class="nav-item Navbar_nav-item">
+            <a class="nav-link Navbar_nav-link" title="Nos realisations" href="{% link nos-realisations.html %}"> Nos réalisations</a>
           </li>
           <li class="nav-item Navbar_nav-item">
             <a class="nav-link Navbar_nav-link" title="Nos Prestations" href="{% link nos-prestations.html %}"> Nos prestations </a>
