--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -15,7 +15,7 @@
 
 
 :root {
-  --color-primary: #D6249D;
+  --color-primary: #e62324;
   --color-secondary: #333333;
   --fontfamilyFont1: "Georgia", Helvetica, Arial, sans-serif;
   --lineheight715: 1.7;
@@ -75,7 +75,7 @@ body {
 
   &:hover{
     transition: .2s all ease-in-out;
-    background: var(--color-primary) !important;
+    background: #e62324 !important;
     color: #fff !important;
     cursor: pointer;
   }
@@ -170,8 +170,8 @@ header .top a {
 
   &:hover {
     text-decoration: none;
-    color: var(--color-primary) !important;
-    background-color: var(--color-secondary) !important;
+    color: #fff !important;
+    background: #e62324 !important;
     box-shadow: none;
     transition: all .3s;
     cursor: pointer;
@@ -197,6 +197,10 @@ header .top a {
 
   @media only screen and (max-width: 1200px) {
     padding: 0 0 !important;
+  }
+
+  @media only screen and (max-width: 768px) {
+    top: 0;
   }
 
   &_main {
@@ -227,8 +231,13 @@ header .top a {
       // }
 
       @media only screen and (max-width: 990px) {
-        max-height: 6rem !important;
-        margin-top: 0rem;
+        max-height: auto !important;
+        margin-top: .5rem;
+      }
+
+      @media only screen and (max-width: 768px) {
+        width: auto;
+        height: 4rem;
       }
 
       // @media only screen and (max-width: 768px) {
@@ -325,7 +334,7 @@ header .top a {
 
       &:hover {
         width: auto !important;
-        color: var(--color-primary) !important;
+        color: #e62324 !important;
         cursor: pointer;
       }
     }
@@ -397,8 +406,8 @@ header .top a {
 
       &:hover {
         text-decoration: none;
-        color: var(--color-primary) !important;
-        background-color: var(--color-secondary) !important;
+        color: #fff !important;
+        background: #e62324 !important;
         box-shadow: none;
         transition: all .3s;
         cursor: pointer;
@@ -484,6 +493,10 @@ fieldset {
   display: none;
 }
 
+.color-black{
+  color: #212529 !important;
+}
+
 .navbar-active {
   position: fixed !important;
   width: 100%;
@@ -551,35 +564,11 @@ fieldset {
 
 
 .slider {
-  position: relative;
-  background-image: url("../img/slider.jpeg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  z-index: 0;
-  position: relative;
 
-  @media only screen and (max-width: 990px) {
-   height: 100%;
-  }
-
-
-  &::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.8);
-    opacity: 0.5;
-    transition: 0.5s;
-  }
 
   &_content {
     position: relative;
     width: 100%;
-    padding: 35rem 0;
 
     @media only screen and (max-width: 1200px) {
       width: 100%;
@@ -595,9 +584,20 @@ fieldset {
       text-align: center;
       margin: 2rem 0;
 
-      @media only screen and (max-width: 768px) {
+      @media only screen and (max-width: 990px) {
         text-align: center;
         font-size: 4.2rem;
+        margin: .5rem 0;
+      }
+
+      @media only screen and (max-width: 768px) {
+        margin: .5rem 0;
+        font-size: 3rem;
+      }
+
+
+      @media only screen and (max-width: 480px) {
+        font-size: 2.2rem;
       }
     }
 
@@ -608,6 +608,11 @@ fieldset {
       line-height: 39px;
       text-align: center;
       color: #FFF;
+
+      @media only screen and (max-width: 768px) {
+        line-height: 1.3;
+        font-size: 1.6rem;
+      }
     }
 
     &-button{
@@ -621,12 +626,19 @@ fieldset {
       margin: 0 auto;
       margin-top: 7rem;
 
+
+      @media only screen and (max-width: 768px) {
+        margin-top: 1rem;
+        width: 90%;
+        padding: .5rem;
+      }
+
       &:hover{
         text-decoration: none;
-        color: #fff;
-        background: var(--color-primary);
+        color: #fff !important;
+        background: #e62324 !important;
         transition: .2s all ease-in-out;
-        border: .2rem solid var(--color-primary);
+        border: .2rem solid  #e62324;
         cursor: pointer;
       }
 
@@ -642,10 +654,10 @@ fieldset {
   
         &:hover{
           text-decoration: none;
-          color: #fff;
-          background: var(--color-primary);
+          color: #fff !important;
+          background: #e62324 !important;
           transition: .2s all ease-in-out;
-          border: .2rem solid var(--color-primary);
+          border: .2rem solid #e62324;
           cursor: pointer;
         }
       }
@@ -666,11 +678,12 @@ fieldset {
         line-height: 22.4px;
         text-align: center;
         color: #fff;
+        text-transform: uppercase;
 
         &:hover{
           text-decoration: none;
-          color: #fff;
-          background: var(--color-primary);
+          color: #fff !important;
+          background: #e62324 !important;
           transition: .2s all ease-in-out;
           cursor: pointer;
         }
@@ -683,17 +696,111 @@ fieldset {
         line-height: 22.4px;
         text-align: center;
         color: #fff;
+        text-transform: uppercase;
 
         &:hover{
           text-decoration: none;
-          color: #fff;
-          color: var(--color-primary);
+          color: #fff !important;
+          background: #e62324 !important;
           transition: .2s all ease-in-out;
           cursor: pointer;
         }
       }
     }
   }
+}
+
+
+.slider2 {
+  position: absolute;
+  z-index: 1000;
+  top: 80%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  transform: translate(-50%, -50%)
+}
+
+@media only screen and (max-width: 1700px) {
+  .slider2 {
+    top: 70%
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .slider2 {
+    top: 70%
+  }
+}
+
+@media only screen and (max-width: 990px) {
+  .slider2 {
+    top: 65%
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .slider2 {
+    top: 60%
+  }
+}
+
+.slider {
+  overflow-x: hidden !important;
+  position: relative
+}
+
+.slider_bg {
+  padding-bottom: 0;
+  z-index: 100 !important
+}
+
+.slider_content {
+  position: absolute;
+  top: 30%;
+  left: 0;
+  right: 0;
+  z-index: 100
+}
+
+@media only screen and (max-width: 600px) {
+  .slider_content {
+    top: 25%
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .slider_content {
+    top: 20%
+  }
+}
+
+.background-video{
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+}
+
+
+
+.slider_images {
+  display: flex;
+  align-items: flex-end
+}
+
+@media only screen and (max-width: 990px) {
+  .slider_images {
+    display: none
+  }
+}
+
+.slider_images-image {
+  position: relative
+}
+
+.slider_images-image-1 {
+  margin-right: -10rem;
+  z-index: 100
 }
 
 
@@ -1016,13 +1123,12 @@ fieldset {
       width: 47.5rem;
       height: 66.2rem;
 
-      @media only screen and (max-width: 1200px) {
-        height: 100%;
+      @media only screen and (max-width: 1400px) {
+        width: 100%;
       }
 
       @media only screen and (max-width: 1200px) {
         position: relative;
-        height: auto;
         margin: 1rem 0;
       }
     }
@@ -1140,7 +1246,7 @@ fieldset {
     }
 
     &-title2{
-      font-family: "Lato", sans-serif;
+      font-family: var(--fontfamilyFont1);
       font-size: 3.6rem;
       font-weight: 400;
       line-height: var(--lineheight715);
@@ -1150,6 +1256,33 @@ fieldset {
       margin-bottom: 2rem;
       white-space: nowrap;
       position: relative;
+
+      @media only screen and (max-width: 1600px) {
+        white-space: normal !important;
+      }
+
+      @media only screen and (max-width: 1200px) {
+        white-space: normal !important;
+        padding-left: 1rem;
+        text-align: center;
+      }
+    }
+
+    &-title3{
+      font-family: "Montserrat", sans-serif;
+      font-size: 2.5rem;
+      font-weight: 400;
+      line-height: var(--lineheight715);
+      letter-spacing: var(--letterspacing09);
+      text-align: left;
+      text-transform: uppercase;
+      margin-bottom: 2rem;
+      white-space: nowrap;
+      position: relative;
+
+      @media only screen and (max-width: 1600px) {
+        white-space: normal !important;
+      }
 
       @media only screen and (max-width: 1200px) {
         white-space: normal !important;
@@ -1226,14 +1359,15 @@ fieldset {
       border: .1rem solid #5C5C5C;
       padding: 1rem 2.5rem !important;
       color: #5C5C5C;
-
+      width: 100%;
+      display: block;
 
       &:hover{
         transition: .2s all ease-in-out;
         text-decoration: none;
-        color: #fff;
-        background-color: var(--color-primary);
-        border: .1rem solid var(--color-primary);
+        color: #fff !important;
+        background: #e62324 !important;
+        border: .1rem solid #e62324;
         cursor: pointer;
       }
     }
@@ -1258,9 +1392,9 @@ fieldset {
       &:hover{
         transition: .2s all ease-in-out;
         text-decoration: none;
-        color: #fff;
-        background-color: var(--color-primary);
-        border: .1rem solid var(--color-primary);
+        color: #fff !important;
+        background: #e62324 !important;
+        border: .1rem solid #e62324;
         cursor: pointer;
       }
     }
@@ -1282,9 +1416,9 @@ fieldset {
       &:hover{
         transition: .2s all ease-in-out;
         text-decoration: none;
-        color: #fff;
-        background-color: var(--color-primary);
-        border: .1rem solid var(--color-primary);
+        color: #fff !important;
+        background: #e62324 !important;
+        border: .1rem solid #e62324;
         cursor: pointer;
       }
     }
@@ -1299,6 +1433,15 @@ fieldset {
     font-weight: 500;
     line-height: 30px;
     text-align: left;
+    }
+
+    &-p{
+      color: #333;
+      font-family: var(--fontfamilyFont2);
+      font-size: 1.6rem;
+      font-weight: 400;
+      line-height: var(--lineheight2565);
+      text-align: left;
     }
   }
 }
@@ -1380,18 +1523,36 @@ ul{
 
 
 .to-be-right{
-  margin-right: -48% !important;
+  margin-right: -70rem !important;
 
   @media only screen and (max-width: 1600px) {
-    margin-right: -55% !important;
+    margin-right: -65rem !important;
   }
 
   @media only screen and (max-width: 1400px) {
-   // margin-right: -60% !important;
+   margin-right: -60rem !important;
   }
 
   @media only screen and (max-width: 1200px) {
     margin-right: 0 !important;
+  }
+}
+
+
+.to-be-top{
+  margin-top: -10rem;
+  margin-left: -23rem;
+
+  @media only screen and (min-width: 2200px) {
+    margin-left: -10rem;
+  }
+
+  @media only screen and (max-width: 1980px) {
+    margin-left: -15rem;
+  }
+
+  @media only screen and (max-width: 1830px) {
+    margin-left: 0;
   }
 }
 
@@ -1449,7 +1610,7 @@ ul{
     background-color: #333; /* Set the color of the line */
     z-index: 10000;
 
-    @media only screen and (max-width: 768px) {
+    @media only screen and (max-width: 1440px) {
       display: none;
     }
   }
@@ -1461,9 +1622,27 @@ ul{
   &::after {
     content: ""; /* Create an empty element for the line */
     position: absolute;
-    top: 5rem;
+    top: 1.7rem;
     right: -1rem; /* Adjust this to control the gap between the title and line */
     height: 75%; /* Makes the line match the height of the title */
+    width: .2rem; /* Set the line width */
+    background: linear-gradient(to bottom, #333 50%, #fff 50%); /* Gradient from black to white */
+    z-index: 10000;
+
+    @media only screen and (max-width: 768px) {
+      display: none;
+    }
+}
+}
+
+
+.linear-after-services{
+  &::after {
+    content: ""; /* Create an empty element for the line */
+    position: absolute;
+    top: 4rem;
+    right: -1rem; /* Adjust this to control the gap between the title and line */
+    height: 90%; /* Makes the line match the height of the title */
     width: .2rem; /* Set the line width */
     background: linear-gradient(to bottom, #333 50%, #fff 50%); /* Gradient from black to white */
     z-index: 10000;
@@ -1581,9 +1760,9 @@ ul{
   &::before {
     content: ""; /* Create an empty element for the line */
     position: absolute;
-    top: 2rem;
+    top: .7rem;
     left: 0; /* Adjust this to control the gap between the title and line */
-    height: 9rem; /* Makes the line match the height of the title */
+    height: 15rem; /* Makes the line match the height of the title */
     width: 2px; /* Set the line width */
     background: linear-gradient(to bottom, #333 50%, #fff 50%); /* Gradient from black to white */
     z-index: 100000;
@@ -1649,6 +1828,7 @@ ul{
 
   @media only screen and (max-width: 990px) {
     width: 100%;
+    padding-right: 0;
   }
 
   @media only screen and (max-width: 768px) {
@@ -1751,6 +1931,25 @@ ul{
   padding-top: .8rem;
 }
 
+
+.owlNav-left2{
+  position: absolute !important;
+  top: 50% !important;
+  left: -10% !important;
+  width: 3.5rem !important;
+  height: 3.5rem !important;
+  color: var(--color-primary) !important;
+  font-size: 3.6rem !important;
+  padding: .1rem;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding-top: .8rem;
+}
+
+
 .owlNav-right{
   position: absolute !important;
   top: 50% !important;
@@ -1768,6 +1967,25 @@ ul{
   text-align: center;
   padding-top: .8rem;
 }
+
+
+.owlNav-right2{
+  position: absolute !important;
+  top: 50% !important;
+  right: -10% !important;
+  width: 3.5rem !important;
+  height: 3.5rem !important;
+  color: var(--color-primary) !important;
+  font-size: 3.6rem !important;
+  padding: .1rem;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding-top: .8rem;
+}
+
 
 .active-clr{
   color: var(--color-secondary) !important;
@@ -1893,28 +2111,28 @@ ul{
 
 .section {
   font-family: 'Montserrat', sans-serif;
-  padding: 10rem 14rem;
+  padding: 10rem 22rem;
 
   @media only screen and (min-width: 2200px) {
     padding: 10rem .5rem;
   }
 
   @media only screen and (max-width: 1800px) {
-    padding: 10rem 14rem;
+    padding: 10rem 22rem;
   }
 
 
   @media only screen and (max-width: 1600px) {
-    padding: 7rem 10rem;
+    padding: 7rem 17rem;
   }
 
 
   @media only screen and (max-width: 1200px) {
-    padding: 5rem 7rem;
+    padding: 5rem 14rem;
   }
 
   @media only screen and (max-width: 1100px) {
-    padding: 5rem .5rem;
+    padding: 5rem 10rem;
   }
 
   @media only screen and (max-width: 1000px) {
@@ -2173,7 +2391,7 @@ select{
   &_image{
     margin-bottom: 2rem;
 
-    @media only screen and (max-width: 768px) {
+    @media only screen and (max-width: 1200px) {
       display: flex;
       justify-content: center;
     }
@@ -2183,6 +2401,14 @@ select{
       height: 13.8rem;
       max-width: 100%;
       object-fit: cover;
+
+      @media only screen and (max-width: 1200px) {
+        width: auto;
+        height: auto;
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+      }
     }
   }
 
@@ -2210,9 +2436,9 @@ select{
       text-align: left;
       color: #EAEAEACC;
 
-      @media only screen and (max-width: 990px) {
-        text-align: center;
-      }
+      // @media only screen and (max-width: 990px) {
+      //   text-align: center;
+      // }
     }
 
     &-title2{
@@ -2224,7 +2450,8 @@ select{
       color: #EAEAEACC; 
 
       @media only screen and (max-width: 990px) {
-        text-align: center;
+        margin-top: 1rem;
+        margin-bottom: -.5rem;
       }
     }
 
@@ -2238,10 +2465,7 @@ select{
       color:  #FF0090;
 
       @media only screen and (max-width: 990px) {
-        text-align: center;
         width: 100%;
-        display: flex;
-        justify-content: center;
       }
 
       &:hover{
@@ -2277,7 +2501,7 @@ select{
       text-align: left;
 
       @media only screen and (max-width: 990px) {
-        text-align: center;
+        text-align: left;
       }
     }
 
@@ -2289,9 +2513,9 @@ select{
       line-height: var(--lineheight2565);
       text-align: left;
 
-      @media only screen and (max-width: 990px) {
-        text-align: center;
-      }
+      // @media only screen and (max-width: 990px) {
+      //   text-align: center;
+      // }
     }
 
     &-ul{
@@ -2330,6 +2554,13 @@ select{
     &-icon{
       color: #FFFFFF80;
       font-size: 2.4rem;
+
+      &:hover{
+        text-decoration: none;
+        color: #e62324;
+        transition: .2s all ease-in-out;
+        cursor: pointer;
+      }
     }
   }
 
@@ -2382,6 +2613,14 @@ select{
   text-decoration: none;
 }
 
+.color-red{
+  color: #e62324;
+
+  &:hover{
+    color: #fff;
+  }
+}
+
 
 
 .fixphone {
@@ -2405,10 +2644,10 @@ select{
   clip-path: polygon(10% 0%, 100% 0, 100% 100%, 0% 100%);
 
   &:hover{
-    border: 2px solid var(--color-primary);
+    border: 2px solid #e62324;
     transition: .2s all ease-in-out;
-    background: rgba(0, 0, 0, 0);
-    color: var(--color-primary);
+    color: #fff !important;
+    background: #e62324 !important;
     text-decoration: none;
     text-decoration: none;
     cursor: pointer;
@@ -2665,20 +2904,22 @@ select{
 
       &:hover {
         text-decoration: none;
-        background-color: var(--color-primary) !important;
+        color: #fff !important;
+        background: #e62324 !important;
         transition: .3s all ease-in-out;
         border: none;
         outline: none;
-        color: #fff;
         cursor: pointer;
       }
     }
 
   }
-
-
 }
 
+
+ul{
+  color: #fff !important
+}
 
 
 
