--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -2,27 +2,10 @@
   <div class="row align-items-center">
     <div class="col-md-7">
       <div class="mapouter">
-        <div class="gmap_canvas"><iframe width="100%" height="400px" id="gmap_canvas"
-            src="https://maps.google.com/maps?q=BHinternet&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
-            scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://online.stopwatch-timer.net/">timer
-            stopwatch</a><br><a href="https://textcaseconvert.com/"></a><br>
-          <style>
-            .mapouter {
-              position: relative;
-              text-align: right;
-              height: 400px;
-              width: 100%;
-            }
-          </style><a href="https://www.embedmaps.co">create map in google</a>
-          <style>
-            .gmap_canvas {
-              overflow: hidden;
-              background: none !important;
-              height: 400px;
-              width: 100%;
-            }
-          </style>
-        </div>
+        <div style="width: 100%"><iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0"
+            marginwidth="0"
+            src="https://maps.google.com/maps?width=100%25&amp;height=400&amp;hl=en&amp;q=4%20RUE%20DES%20FERMES%2091700%20SAINTE-GENEVIEVE-DES-BOIS+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a
+              href="https://www.gps.ie/">gps vehicle tracker</a></iframe></div>
       </div>
     </div>
     <div class="col-md-5">
@@ -34,11 +17,6 @@
         <h3 class="footer_content-header">Agence </h3>
         <p class="footer_content-p">{{site.data.company.address}}</p>
       </div>
-      <div class="mt-5 footer_content">
-        <h3 class="footer_content-header">Espace de vente</h3>
-        <p class="footer_content-p">4, grande rue<br>
-          91360 Épinay-sur-Orge</p>
-      </div>
     </div>
   </div>
   <div class="section">
@@ -47,26 +25,26 @@
         <div class="footer_image">
           <a href="{% link accueil.html %}" title="Accueil"><img loading="lazy" src="./assets/img/logo.svg"
               class="footer_image-logo" alt="Logo" /></a>
-              </div>
-              <div class="footer_content2">
-                <ul class="footer_content-ul">
-                  <li class="footer_content-ul--li">
-                    <a href="{% link accueil.html %}" class="footer_content-ul--link">Accueil</a>
-                  </li>
-                  <li class="footer_content-ul--li">
-                    <a href="{% link nos-prestations.html %}" class="footer_content-ul--link">Nos Prestations</a>
-                  </li>
-                  <li class="footer_content-ul--li">
-                    <a href="{% link nos-realisations.html %}" class="footer_content-ul--link">Nos Réalisations</a>
-                  </li>
-                  <!-- <li class="footer_content-ul--li">
+        </div>
+        <div class="footer_content2">
+          <ul class="footer_content-ul">
+            <li class="footer_content-ul--li">
+              <a href="{% link accueil.html %}" class="footer_content-ul--link">Accueil</a>
+            </li>
+            <li class="footer_content-ul--li">
+              <a href="{% link nos-prestations.html %}" class="footer_content-ul--link">Nos Prestations</a>
+            </li>
+            <li class="footer_content-ul--li">
+              <a href="{% link nos-realisations.html %}" class="footer_content-ul--link">Nos Réalisations</a>
+            </li>
+            <!-- <li class="footer_content-ul--li">
                     <a href="{% link blog.html %}" class="footer_content-ul--link">Blog</a>
                   </li> -->
-                  <li class="footer_content-ul--li">
-                    <a href="{% link contact.html %}" class="footer_content-ul--link">Nous Contacter</a>
-                  </li>
-                </ul>
-              </div>
+            <li class="footer_content-ul--li">
+              <a href="{% link contact.html %}" class="footer_content-ul--link">Nous Contacter</a>
+            </li>
+          </ul>
+        </div>
       </div>
       <div class="col-lg-6">
         <div class="footer_content2">
@@ -74,28 +52,36 @@
           <br>
           <ul class="footer_content-ul">
             <li class="footer_content-ul--li">
-              <a href="{% link article-agrandir-sa-maison.html %}" class="footer_content-ul--link">Agrandir sa maison : conseils pratiques pour un projet réussi</a>
+              <a href="{% link article-agrandir-sa-maison.html %}" class="footer_content-ul--link">Agrandir sa maison :
+                conseils pratiques pour un projet réussi</a>
             </li>
             <li class="footer_content-ul--li">
-              <a href="{% link comment-realiser.html %}" class="footer_content-ul--link">Comment réaliser l'ouverture d'un mur porteur dans votre maison</a>
+              <a href="{% link comment-realiser.html %}" class="footer_content-ul--link">Comment réaliser l'ouverture
+                d'un mur porteur dans votre maison</a>
             </li>
             <li class="footer_content-ul--li">
-              <a href="{% link entreprise-de-construction.html %}" class="footer_content-ul--link">Entreprise de construction : comment choisir le bon partenaire pour vos travaux</a>
+              <a href="{% link entreprise-de-construction.html %}" class="footer_content-ul--link">Entreprise de
+                construction : comment choisir le bon partenaire pour vos travaux</a>
             </li>
             <li class="footer_content-ul--li">
-              <a href="{% link entreprise-de-gros.html %}" class="footer_content-ul--link">Entreprise de gros œuvre : un pilier essentiel dans la construction</a>
+              <a href="{% link entreprise-de-gros.html %}" class="footer_content-ul--link">Entreprise de gros œuvre : un
+                pilier essentiel dans la construction</a>
             </li>
             <li class="footer_content-ul--li">
-              <a href="{% link entreprise-d-extension-de-maison.html %}" class="footer_content-ul--link">Entreprise d’extension de maison : tout ce qu'il faut savoir pour réussir votre projet</a>
+              <a href="{% link entreprise-d-extension-de-maison.html %}" class="footer_content-ul--link">Entreprise
+                d’extension de maison : tout ce qu'il faut savoir pour réussir votre projet</a>
             </li>
             <li class="footer_content-ul--li">
-              <a href="{% link la-reprise-en-sous-ceuvre.html %}" class="footer_content-ul--link">La reprise en sous-œuvre : Tout ce que vous devez savoir</a>
+              <a href="{% link la-reprise-en-sous-ceuvre.html %}" class="footer_content-ul--link">La reprise en
+                sous-œuvre : Tout ce que vous devez savoir</a>
             </li>
             <li class="footer_content-ul--li">
-              <a href="{% link renovation-d-appartement-a-paris.html %}" class="footer_content-ul--link">Rénovation d'appartement à Paris : guide pratique et conseils</a>
+              <a href="{% link renovation-d-appartement-a-paris.html %}" class="footer_content-ul--link">Rénovation
+                d'appartement à Paris : guide pratique et conseils</a>
             </li>
             <li class="footer_content-ul--li">
-              <a href="{% link reprise-des-structures.html %}" class="footer_content-ul--link">Reprise des structures : un guide pratique</a>
+              <a href="{% link reprise-des-structures.html %}" class="footer_content-ul--link">Reprise des structures :
+                un guide pratique</a>
             </li>
           </ul>
         </div>
@@ -104,13 +90,12 @@
         <div class="footer_content2 pt-3">
           <h3 class="footer_content-title2">Nous contacter</h3>
           <br>
-          <a href="tel:{{site.data.company.phone}}" class="footer_content-link color-red">{{site.data.company.phone}}</a>
+          <a href="tel:{{site.data.company.phone}}"
+            class="footer_content-link color-red">{{site.data.company.phone}}</a>
           <p class="footer_content-p">Retrouvez-nous sur</p>
           <ul class="footer_social">
-            <li class="footer_social-icon"><i class="fab fa-facebook-f"></i></li>
-            <li class="footer_social-icon"><i class="fab fa-instagram"></i></li>
-            <li class="footer_social-icon"><i class="fab fa-linkedin-in"></i></li>
-            <li class="footer_social-icon"><i class="fab fa-twitter"></i></li>
+            <li class="footer_social-icon"> <a href="https://www.instagram.com/dmb_construction_/profilecard/?igsh=MXNubWNzd2lkamhxag%3D%3D" target="_blank" class="icon-link"> <i class="fab fa-instagram"></i></a></li>
+            <li class="footer_social-icon"> <a href="https://www.linkedin.com/in/dilan-mutlu-a59ab8258/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" class="icon-link"> <i class="fab fa-linkedin-in"></i></a></li>
           </ul>
         </div>
       </div>
