--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -507,7 +507,7 @@ fieldset {
   top: 0 !important;
   left: 0 !important;
   transition: .2s;
-  z-index: 1000000 !important;
+  z-index: 10000000 !important;
 }
 
 .navbar-active .Navbar_main {
@@ -700,8 +700,7 @@ fieldset {
 
         &:hover{
           text-decoration: none;
-          color: #fff !important;
-          background: #e62324 !important;
+          color: #e62324 !important;
           transition: .2s all ease-in-out;
           cursor: pointer;
         }
@@ -1086,7 +1085,7 @@ fieldset {
       width: 100%;
       height: 64.7rem;
       object-fit: cover;
-      z-index: 10000;
+      z-index: 1000000;
 
       @media only screen and (max-width: 1200px) {
         height: 100%;
@@ -1477,9 +1476,21 @@ fieldset {
   }
 }
 
+.icon-link{
+  color: #FFFFFF80 !important;
+
+  &:hover{
+    color: var(--color-primary) !important;
+    text-decoration: none;
+    transition: .2s all ease-in-out;
+    cursor: pointer;
+  }
+}
+
 
 ul{
   list-style-position: inside !important;
+  font-size: 1.4rem;
 }
 
 .bg-white{
@@ -1722,6 +1733,23 @@ ul{
 }
 }
 
+.linear-before41{
+  &::before {
+    content: ""; /* Create an empty element for the line */
+    position: absolute;
+    top: -12rem;
+    left: 85%; /* Adjust this to control the gap between the title and line */
+    height: 17%; /* Makes the line match the height of the title */
+    width: .2rem; /* Set the line width */
+    background: linear-gradient(to bottom, #333 20%, #fff 80%); /* Gradient from black to white */
+    z-index: 100000;
+
+    @media only screen and (max-width: 768px) {
+      display: none;
+    }
+}
+}
+
 .linear-after5{
   &::after {
     content: ""; /* Create an empty element for the line */
@@ -1749,6 +1777,40 @@ ul{
     width: .2rem; /* Set the line width */
     background: linear-gradient(to bottom, #333 20%, #fff 80%); /* Gradient from black to white */
     z-index: 10000;
+
+    @media only screen and (max-width: 768px) {
+      display: none;
+    }
+}
+}
+
+.linear-before6{
+  &::before {
+    content: ""; /* Create an empty element for the line */
+    position: absolute;
+    top: -15rem;
+    right: -9rem; /* Adjust this to control the gap between the title and line */
+    height: 20%; /* Makes the line match the height of the title */
+    width: .2rem; /* Set the line width */
+    background: linear-gradient(to bottom, #333 20%, #fff 80%); /* Gradient from black to white */
+    z-index: 100000;
+
+    @media only screen and (max-width: 768px) {
+      display: none;
+    }
+}
+}
+
+.linear-before66{
+  &::before {
+    content: ""; /* Create an empty element for the line */
+    position: absolute;
+    top: -15rem;
+    right: 90%; /* Adjust this to control the gap between the title and line */
+    height: 20%; /* Makes the line match the height of the title */
+    width: .2rem; /* Set the line width */
+    background: linear-gradient(to bottom, #333 20%, #fff 80%); /* Gradient from black to white */
+    z-index: 100000;
 
     @media only screen and (max-width: 768px) {
       display: none;
