--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -23,7 +23,7 @@
     <div class="row">
       <div class="col-lg-3">
         <div class="footer_image">
-          <a href="./index.html" title="Accueil"><img loading="lazy" src="./assets/img/logo.svg"
+          <a href="./index.html" title="Accueil"><img loading="lazy" src="./assets/img/white-logo.png"
               class="footer_image-logo" alt="Logo" /></a>
         </div>
         <div class="footer_content2">
