- image modifications in pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17521,7 +17521,7 @@ a.text-dark:focus {
 }
 
 .img-container {
-    background-image: url("../img/menu-1.jpeg");
+    background-image: url("../img/nous-sommes.png");
     background-size: cover;
     background-position: bottom;
     background-repeat: no-repeat
